--- a/views/main.hbs
+++ b/views/main.hbs
@@ -3,9 +3,10 @@
 
 {{!-- {{#each Item}} --}}
 <div class="itemShow">
-<img src="{{Item.picture}}"></img>
-<h3>{{Item.name}}</h3><br>
-<p>Date Listed: {{Item.createdAt}}</p><br>
+{{!-- <img src="{{Item.picture}}"></img> --}}
+<h3>{{name}}</h3><br>
+<p>{{starting}}</p>
+<a href="/details">Details</a>
 </div>
 {{!-- {{/each}} --}}
 <aside id="sidebar">
