--- a/views/newItem.hbs
+++ b/views/newItem.hbs
@@ -1,18 +1,16 @@
 <section class="container">
   <h4>New Item</h4>
-  <form action="/" method="post" class="item-form">
+  <form action="/" method="POST" class="item-form">
     <div class="input-field">
     <p>Item Name:</p> 
-    <input name="createName" type="text"><br>
+    <input name="createName" type="text"/><br>
     <p>Item Description</p>
     <textarea name="createItemDes" cols="30" rows="5" placeholder="Enter Description"></textarea><br>
     <p>Starting Bid</p>
     <input name="createStarting" type="text"><br>
+    <input type="submit" value="List" class="btn"/>
+    </div>
 </form>
-    </div>
-    <div class="input-field">
-      <input type="submit" value="List" class="btn" href="main">
-    </div>
-  </form>
+    
 </section>
 
