--- a/views/show.hbs
+++ b/views/show.hbs
@@ -10,3 +10,12 @@
         <button id:'enterNewBid' action:'#'>Bid On Item</button>
     </form>
 </div>
+<aside id="sidebar">
+    <h3>Update Item</h3><br>
+      <form action="/" method="POST" class="item-form">
+    <div class="input-field"> 
+    <input name="updateName" type="text" placeholder="Name"/><br><br>
+    <textarea name="updateItemDes" cols="30" rows="5" placeholder="Description"></textarea><br><br>
+    <input type="submit" value="Update" class="btn"/><br><br>
+    <a href="/listitem">List Item</a>
+</aside>
